[package]
name = "breal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.41"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.0-rc.3"
crdt = "0.5"
tokio = { version = "1.21", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
async-std = "1.8"
env_logger = "0.9"
tokio-stream = "0.1"
tokio-util = "0.6"